--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         const db = firebase.firestore();
         const appId = "fukuoka-2026";
 
-        // 🛡️ 核心修復：使用完全獨立的 SVG 渲染，不依賴任何外部庫
+        // 🛡️ 核心修復：使用完全獨立的 SVG 渲染
         const Icon = ({ name, className = "", size = 24 }) => {
             const icons = {
                 'heart': "M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.505 4.04 3 5.5L12 21l7-7Z",
@@ -100,8 +100,7 @@
                 'alert': "M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z M12 9v4 M12 17h.01",
                 'luggage': "M3 14h18M7 21h10M3 7h18a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V9a2 2 0 0 1 2-2zM7 7V4a2 2 0 0 1 2-2h6a2 2 0 0 1 2 2v3",
                 'check': "M20 6L9 17l-5-5",
-                'square': "M3 3h18v18H3z",
-                'info': "M12 16v-4M12 8h.01M22 12a10 10 0 1 1-20 0 10 10 0 0 1 20 0z"
+                'activity': "M22 12h-4l-3 9L9 3l-3 9H2"
             };
             return (
                 <svg width={size} height={size} viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2.5" strokeLinecap="round" strokeLinejoin="round" className={className}>
@@ -113,6 +112,7 @@
         const App = () => {
             const [user, setUser] = useState(null);
             const [expenses, setExpenses] = useState([]);
+            // 行李清單改為純單機狀態 (不連結 Firebase)
             const [packingItems, setPackingItems] = useState({});
             const [activeTab, setActiveTab] = useState('expense');
             const [fxInput, setFxInput] = useState('');
@@ -135,7 +135,7 @@
                 { category: '六、雜物與 Ruby 專區', items: ['奶粉/副食品/餐具', '足量尿布/濕紙巾', '水瓶/雨傘/頸枕'] }
             ];
 
-            // 1. 初始化登入
+            // 1. 初始化登入 (僅針對記帳功能)
             useEffect(() => {
                 const unsubscribe = auth.onAuthStateChanged(u => {
                     if (u) setUser(u);
@@ -144,22 +144,14 @@
                 return () => unsubscribe();
             }, []);
 
-            // 2. 監聽資料
+            // 2. 監聽支出資料 (維持雲端)
             useEffect(() => {
                 if (!user) return;
-                
-                // 監聽支出
                 const unsubExp = db.collection(`artifacts/${appId}/public/data/expenses`).onSnapshot(snap => {
                     const docs = snap.docs.map(d => ({ id: d.id, ...d.data() }));
                     setExpenses(docs.sort((a, b) => (b.date || "").localeCompare(a.date || "")));
                 });
-
-                // 監聽行李清單勾選狀態
-                const unsubPack = db.collection(`artifacts/${appId}/public/data/packing`).doc('status').onSnapshot(doc => {
-                    if (doc.exists()) setPackingItems(doc.data());
-                });
-
-                return () => { unsubExp(); unsubPack(); };
+                return () => unsubExp();
             }, [user]);
 
             const showToast = (msg) => {
@@ -189,14 +181,12 @@
                 } finally { setIsSaving(false); }
             };
 
-            const togglePacking = async (item) => {
-                if (!user) return;
-                const newStatus = !packingItems[item];
-                try {
-                    await db.collection(`artifacts/${appId}/public/data/packing`).doc('status').set({
-                        [item]: newStatus
-                    }, { merge: true });
-                } catch (e) { console.error(e); }
+            // 行李清單切換：改為純本地操作
+            const togglePacking = (item) => {
+                setPackingItems(prev => ({
+                    ...prev,
+                    [item]: !prev[item]
+                }));
             };
 
             const deleteItem = async (id) => {
@@ -302,11 +292,11 @@
                                     </div>
                                 </section>
 
-                                {/* 行李清單 */}
+                                {/* 行李清單 (單機版) */}
                                 <section>
                                     <div className="flex items-center gap-4 mb-8 px-4">
                                         <div className="p-4 bg-pink-100 rounded-3xl text-[#FF91C1]"><Icon name="luggage" size={40} /></div>
-                                        <h3 className="text-4xl font-black text-slate-800">行李清單 💜</h3>
+                                        <h3 className="text-4xl font-black text-slate-800">行李清單 (單機) 💜</h3>
                                     </div>
 
                                     {packingListTemplate.map((cat, idx) => (
@@ -328,26 +318,14 @@
                                             </div>
                                         </div>
                                     ))}
-
-                                    {/* 注意事項 */}
-                                    <div className="bg-[#2D2727] text-white p-10 rounded-[50px] shadow-2xl space-y-6 mt-12 mx-4">
-                                        <h4 className="text-2xl font-black text-[#FF91C1] flex items-center gap-3">
-                                            <Icon name="info" size={28} /> 托運與手提提醒
-                                        </h4>
-                                        <ul className="space-y-4 opacity-90 text-lg font-bold">
-                                            <li className="flex gap-3"><span className="text-[#9D76C1]">●</span> 液體：手提 100ml 以內並裝入夾鏈袋</li>
-                                            <li className="flex gap-3"><span className="text-[#9D76C1]">●</span> 打火機：限 1 個且必須手提</li>
-                                            <li className="flex gap-3"><span className="text-[#9D76C1]">●</span> 電池：行動電源嚴禁托運，必手提</li>
-                                        </ul>
-                                    </div>
                                 </section>
 
                                 <div className="p-12 opacity-30 font-black text-center">
                                     <p className="flex items-center justify-center gap-2">
                                         <Icon name="check-circle" size={16} className="text-green-600" />
-                                        雲端同步系統已就緒 💜
+                                        記帳雲端同步已就緒 💜
                                     </p>
-                                    <p className="text-xs mt-3 uppercase tracking-widest">DEVICE ID: {user?.uid?.substring(0,8) || "LOGGING..."}</p>
+                                    <p className="text-xs mt-3 uppercase tracking-widest italic">行李清單為單機操作，重整將會重置</p>
                                 </div>
                             </div>
                         )}
