--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             border-radius: 40px; 
             border: 4px solid #E2D9F3; 
             box-shadow: 0 10px 25px rgba(157, 118, 193, 0.1);
+            transition: all 0.2s ease;
         }
 
         @keyframes spin-slow {
@@ -55,11 +56,20 @@
         }
         .animate-spin-custom { animation: spin-slow 1s linear infinite; }
         
-        /* 避免按鈕文字被選取 */
         button { user-select: none; }
 
-        .packing-item-done { opacity: 0.5; background-color: #F3F0F8; border-color: transparent !important; }
-        .packing-text-done { text-decoration: line-through; color: #9D76C1; }
+        /* 打勾後的樣式修飾 */
+        .packing-item-done { 
+            background-color: #F3F0F8 !important; 
+            border-color: #D1C4E9 !important;
+            box-shadow: none !important;
+            transform: scale(0.98);
+        }
+        .packing-text-done { 
+            text-decoration: line-through; 
+            color: #BDB7C4 !important; 
+            opacity: 0.6;
+        }
     </style>
 </head>
 <body class="bg-pattern">
@@ -88,7 +98,7 @@
         const db = firebase.firestore();
         const appId = "fukuoka-2026";
 
-        // 🛡️ 核心修復：使用完全獨立的 SVG 渲染
+        // 🛡️ SVG 圖標組件
         const Icon = ({ name, className = "", size = 24 }) => {
             const icons = {
                 'heart': "M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.505 4.04 3 5.5L12 21l7-7Z",
@@ -97,13 +107,12 @@
                 'trash': "M3 6h18M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2",
                 'refresh': "M3 12a9 9 0 0 1 9-9 9.75 9.75 0 0 1 6.74 2.74L21 8 M21 3v5h-5 M21 12a9 9 0 0 1-9 9 9.75 9.75 0 0 1-6.74-2.74L3 16 M3 21v-5h5",
                 'hotel': "M3 21V9a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2v12M7 11h2M7 15h2M15 11h2M15 15h2M11 21v-4a1 1 0 0 1 1-1h0a1 1 0 0 1 1 1v4",
-                'alert': "M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z M12 9v4 M12 17h.01",
                 'luggage': "M3 14h18M7 21h10M3 7h18a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V9a2 2 0 0 1 2-2zM7 7V4a2 2 0 0 1 2-2h6a2 2 0 0 1 2 2v3",
                 'check': "M20 6L9 17l-5-5",
                 'activity': "M22 12h-4l-3 9L9 3l-3 9H2"
             };
             return (
-                <svg width={size} height={size} viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2.5" strokeLinecap="round" strokeLinejoin="round" className={className}>
+                <svg width={size} height={size} viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="3" strokeLinecap="round" strokeLinejoin="round" className={className}>
                     <path d={icons[name] || ""} />
                 </svg>
             );
@@ -112,7 +121,7 @@
         const App = () => {
             const [user, setUser] = useState(null);
             const [expenses, setExpenses] = useState([]);
-            // 行李清單改為純單機狀態 (不連結 Firebase)
+            // 行李清單：純單機 State
             const [packingItems, setPackingItems] = useState({});
             const [activeTab, setActiveTab] = useState('expense');
             const [fxInput, setFxInput] = useState('');
@@ -135,7 +144,7 @@
                 { category: '六、雜物與 Ruby 專區', items: ['奶粉/副食品/餐具', '足量尿布/濕紙巾', '水瓶/雨傘/頸枕'] }
             ];
 
-            // 1. 初始化登入 (僅針對記帳功能)
+            // 1. 登入
             useEffect(() => {
                 const unsubscribe = auth.onAuthStateChanged(u => {
                     if (u) setUser(u);
@@ -144,7 +153,7 @@
                 return () => unsubscribe();
             }, []);
 
-            // 2. 監聽支出資料 (維持雲端)
+            // 2. 監聽雲端支出
             useEffect(() => {
                 if (!user) return;
                 const unsubExp = db.collection(`artifacts/${appId}/public/data/expenses`).onSnapshot(snap => {
@@ -176,17 +185,17 @@
                     });
                     setNewExpense(prev => ({ ...prev, item: '', amount: '' }));
                     showToast("已存入雲端 💜");
-                } catch (e) {
-                    alert("儲存失敗");
-                } finally { setIsSaving(false); }
+                } catch (e) { alert("儲存失敗"); } 
+                finally { setIsSaving(false); }
             };
 
-            // 行李清單切換：改為純本地操作
-            const togglePacking = (item) => {
-                setPackingItems(prev => ({
-                    ...prev,
-                    [item]: !prev[item]
-                }));
+            // 🛡️ 修復點：明確切換單機打勾狀態
+            const togglePacking = (itemName) => {
+                setPackingItems(prev => {
+                    const newState = { ...prev };
+                    newState[itemName] = !prev[itemName];
+                    return newState;
+                });
             };
 
             const deleteItem = async (id) => {
@@ -199,7 +208,7 @@
 
             return (
                 <div className="max-w-md mx-auto min-h-screen relative pb-32">
-                    {/* Toast 成功提示 */}
+                    {/* Toast */}
                     <div className={`fixed top-10 left-1/2 -translate-x-1/2 z-[200] transition-all duration-500 ${toast.show ? 'opacity-100 translate-y-0' : 'opacity-0 -translate-y-10 pointer-events-none'}`}>
                         <div className="bg-black/90 text-white px-8 py-4 rounded-full flex items-center gap-3 shadow-2xl border border-purple-400 backdrop-blur-md">
                             <Icon name="check-circle" className="text-pink-400" />
@@ -223,7 +232,6 @@
                     <div className="px-8 py-10">
                         {activeTab === 'expense' && (
                             <div className="space-y-12 animate-in fade-in duration-500">
-                                {/* 匯率換算 */}
                                 <div className="bg-[#2D2727] text-white p-12 rounded-[60px] shadow-2xl relative overflow-hidden">
                                     <p className="text-md text-[#FF91C1] font-black uppercase tracking-[0.3em] mb-8">JPY ⮕ TWD 即時換算</p>
                                     <div className="flex items-center justify-between">
@@ -237,7 +245,6 @@
                                     </div>
                                 </div>
                                 
-                                {/* 新增表單 */}
                                 <div className="bg-white rounded-[60px] p-12 space-y-10 shadow-2xl border-[8px] border-purple-100">
                                     <div className="flex justify-between items-center text-slate-800">
                                         <h3 className="text-3xl font-black italic underline decoration-pink-300 decoration-[6px] underline-offset-4">新增花費 💜</h3>
@@ -247,7 +254,7 @@
                                     </div>
                                     <div className="space-y-8">
                                         <input type="date" value={newExpense.date} onChange={(e) => setNewExpense({...newExpense, date: e.target.value})} className="w-full border-b-6 border-purple-50 pb-6 text-2xl font-black focus:border-purple-400 outline-none bg-transparent" />
-                                        <input placeholder="買了什麼好東西？" value={newExpense.item} onChange={(e) => setNewExpense({...newExpense, item: e.target.value})} className="w-full border-b-6 border-purple-50 pb-6 text-2xl font-black focus:border-purple-400 outline-none" />
+                                        <input placeholder="買了什麼？" value={newExpense.item} onChange={(e) => setNewExpense({...newExpense, item: e.target.value})} className="w-full border-b-6 border-purple-50 pb-6 text-2xl font-black focus:border-purple-400 outline-none" />
                                         <input type="number" placeholder="日幣金額 ¥" value={newExpense.amount} onChange={(e) => setNewExpense({...newExpense, amount: e.target.value})} className="w-full border-4 border-purple-50 p-7 text-3xl font-black focus:border-purple-400 outline-none bg-slate-50 rounded-[40px]" />
                                     </div>
                                     <button onClick={addExpense} disabled={isSaving} className="w-full kuromi-gradient text-white py-10 rounded-[50px] font-black text-3xl shadow-xl active:scale-95 flex items-center justify-center gap-4 disabled:opacity-70">
@@ -255,7 +262,6 @@
                                     </button>
                                 </div>
 
-                                {/* 列表 */}
                                 {expenses.map((ex, idx) => (
                                     <div key={ex.id || idx} className="kuromi-card p-10 flex justify-between items-center border-l-[25px] border-l-[#9D76C1] shadow-xl">
                                         <div className="flex-1 mr-2">
@@ -279,7 +285,6 @@
 
                         {activeTab === 'tools' && (
                             <div className="space-y-16 animate-in fade-in duration-500">
-                                {/* 飯店資訊 */}
                                 <section className="text-center">
                                     <div className="bg-white rounded-[60px] border-[10px] border-[#9D76C1] p-12 shadow-2xl relative">
                                         <Icon name="hotel" className="text-purple-200 mx-auto mb-4" size={100} />
@@ -292,7 +297,6 @@
                                     </div>
                                 </section>
 
-                                {/* 行李清單 (單機版) */}
                                 <section>
                                     <div className="flex items-center gap-4 mb-8 px-4">
                                         <div className="p-4 bg-pink-100 rounded-3xl text-[#FF91C1]"><Icon name="luggage" size={40} /></div>
@@ -303,18 +307,21 @@
                                         <div key={idx} className="mb-10">
                                             <p className="text-md font-black text-[#9D76C1] mb-6 px-6 border-l-[10px] border-[#9D76C1] ml-4 uppercase tracking-[0.2em]">{cat.category}</p>
                                             <div className="space-y-4 px-4">
-                                                {cat.items.map((item, i) => (
-                                                    <div 
-                                                        key={i} 
-                                                        onClick={() => togglePacking(item)}
-                                                        className={`kuromi-card p-6 flex items-center gap-6 transition-all active:scale-95 cursor-pointer ${packingItems[item] ? 'packing-item-done' : ''}`}
-                                                    >
-                                                        <div className={`w-10 h-10 rounded-2xl border-4 flex items-center justify-center transition-all ${packingItems[item] ? 'bg-[#9D76C1] border-transparent' : 'border-[#E2D9F3]'}`}>
-                                                            {packingItems[item] && <Icon name="check" className="text-white" size={24} />}
+                                                {cat.items.map((item, i) => {
+                                                    const isDone = packingItems[item] === true;
+                                                    return (
+                                                        <div 
+                                                            key={item} 
+                                                            onClick={() => togglePacking(item)}
+                                                            className={`kuromi-card p-6 flex items-center gap-6 transition-all active:scale-95 cursor-pointer ${isDone ? 'packing-item-done' : ''}`}
+                                                        >
+                                                            <div className={`w-10 h-10 rounded-2xl border-4 flex items-center justify-center transition-all ${isDone ? 'bg-[#9D76C1] border-transparent' : 'border-[#E2D9F3]'}`}>
+                                                                {isDone && <Icon name="check" className="text-white" size={24} />}
+                                                            </div>
+                                                            <span className={`text-2xl font-black text-slate-700 transition-all ${isDone ? 'packing-text-done' : ''}`}>{item}</span>
                                                         </div>
-                                                        <span className={`text-2xl font-black text-slate-700 ${packingItems[item] ? 'packing-text-done' : ''}`}>{item}</span>
-                                                    </div>
-                                                ))}
+                                                    );
+                                                })}
                                             </div>
                                         </div>
                                     ))}
@@ -323,9 +330,9 @@
                                 <div className="p-12 opacity-30 font-black text-center">
                                     <p className="flex items-center justify-center gap-2">
                                         <Icon name="check-circle" size={16} className="text-green-600" />
-                                        記帳雲端同步已就緒 💜
+                                        系統運作中 💜
                                     </p>
-                                    <p className="text-xs mt-3 uppercase tracking-widest italic">行李清單為單機操作，重整將會重置</p>
+                                    <p className="text-xs mt-3 uppercase tracking-widest italic">清單勾選為單機暫存，重新整理後將重置</p>
                                 </div>
                             </div>
                         )}
