--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
             const [isSaving, setIsSaving] = useState(false);
             const [toast, setToast] = useState({ show: false, msg: '' });
 
+            // 成員清單更新
             const members = ['KCY', 'Ruby', 'YSL', 'Tsai'];
             const dates = [
                 { date: '5/30', dayName: 'SAT' }, { date: '5/31', dayName: 'SUN' },
@@ -225,6 +226,7 @@
                 } finally { setIsSaving(false); }
             };
 
+            // 保存計畫：修復 id 判斷與狀態清空
             const savePlan = async () => {
                 if (!editPlanBuffer.time || !editPlanBuffer.title || !user) return;
                 setIsSaving(true);
@@ -242,6 +244,7 @@
                 } finally { setIsSaving(false); }
             };
 
+            // 編輯功能修復：確保正確傳遞資料
             const handleEditPlan = (plan) => {
                 setEditingPlan(plan);
                 setEditPlanBuffer({ time: plan.time, title: plan.title });
@@ -274,16 +277,16 @@
                         </div>
                     </div>
 
-                    {/* Header 縮小化 */}
+                    {/* Header 縮小化與名稱更換 */}
                     <header className="kuromi-gradient text-white p-6 pt-10 rounded-b-[40px] shadow-lg text-center relative overflow-hidden">
                         <h1 className="text-4xl font-bold tracking-tighter" style={{ textShadow: '2px 2px 0px rgba(0,0,0,0.2)' }}>福岡 2026</h1>
                         <div className="flex items-center justify-center gap-2 mt-2">
-                            <span className="bg-black/30 px-3 py-1 rounded-full text-[10px] uppercase tracking-widest">KCY FAMILY</span>
+                            <span className="bg-black/30 px-3 py-1 rounded-full text-[10px] uppercase tracking-widest">SHEN FAMILY TRIP</span>
                             <Icon name="heart" size={14} className="fill-pink-400 text-pink-400 animate-pulse" />
                         </div>
                     </header>
 
-                    {/* 導覽列縮小 */}
+                    {/* 導覽列 */}
                     <nav className="flex bg-white/95 backdrop-blur-lg sticky top-0 z-50 px-4 border-b-4 border-purple-50 shadow-sm">
                         <button onClick={() => { setActiveTab('itinerary'); setItineraryView('list'); }} className={`flex-1 py-4 font-black text-base transition-all ${activeTab === 'itinerary' ? 'tab-active' : 'text-slate-400'}`}>行程</button>
                         <button onClick={() => setActiveTab('expense')} className={`flex-1 py-4 font-black text-base transition-all ${activeTab === 'expense' ? 'tab-active' : 'text-slate-400'}`}>記帳</button>
@@ -338,10 +341,18 @@
                                                 <div className="flex justify-between items-center mb-4">
                                                     <span className="text-xs font-black text-white bg-slate-800 px-3 py-1 rounded-full">{plan.time}</span>
                                                     <div className="flex gap-2">
-                                                        <button onClick={(e) => { e.stopPropagation(); handleEditPlan(plan); }} className="p-2 bg-purple-50 text-purple-400 rounded-full active:scale-75 border border-purple-100">
+                                                        <button 
+                                                            type="button"
+                                                            onClick={(e) => { e.stopPropagation(); handleEditPlan(plan); }} 
+                                                            className="p-2 bg-purple-50 text-purple-400 rounded-full active:scale-75 border border-purple-100"
+                                                        >
                                                             <Icon name="pencil" size={16} />
                                                         </button>
-                                                        <button onClick={(e) => { e.stopPropagation(); deletePlan(plan.id); }} className="p-2 bg-red-50 text-red-400 rounded-full active:scale-75 border border-red-100">
+                                                        <button 
+                                                            type="button"
+                                                            onClick={(e) => { e.stopPropagation(); deletePlan(plan.id); }} 
+                                                            className="p-2 bg-red-50 text-red-400 rounded-full active:scale-75 border border-red-100"
+                                                        >
                                                             <Icon name="trash" size={16} />
                                                         </button>
                                                     </div>
